build/log/idf_py_stdout_output_138588
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/w88/code/Radio/build/bootloader && /home/w88/.espressif/python_env/idf6.1_py3.14_env/bin/python /home/w88/code/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/w88/code/Radio/build/bootloader/bootloader.bin
Bootloader binary size 0x66a0 bytes. 0x960 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/w88/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DCJSON_CIRCULAR_LIMIT=10000 -DCJSON_NESTING_LIMIT=1000 -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2144-g87fb2eb4e9\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/w88/code/Radio/build/config -I/home/w88/code/Radio/main -I/home/w88/code/esp-idf/components/esp_libc/platform_include -I/home/w88/code/esp-idf/components/freertos/config/include -I/home/w88/code/esp-idf/components/freertos/config/include/freertos -I/home/w88/code/esp-idf/components/freertos/config/xtensa/include -I/home/w88/code/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/w88/code/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/w88/code/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/w88/code/esp-idf/components/freertos/esp_additions/include -I/home/w88/code/esp-idf/components/esp_hw_support/include -I/home/w88/code/esp-idf/components/esp_hw_support/include/soc -I/home/w88/code/esp-idf/components/esp_hw_support/dma/include -I/home/w88/code/esp-idf/components/esp_hw_support/ldo/include -I/home/w88/code/esp-idf/components/esp_hw_support/debug_probe/include -I/home/w88/code/esp-idf/components/esp_hw_support/etm/include -I/home/w88/code/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/w88/code/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/w88/code/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/w88/code/esp-idf/components/esp_hw_support/power_supply/include -I/home/w88/code/esp-idf/components/esp_hw_support/modem/include -I/home/w88/code/esp-idf/components/esp_hw_support/port/esp32/. -I/home/w88/code/esp-idf/components/esp_hw_support/port/esp32/include -I/home/w88/code/esp-idf/components/heap/include -I/home/w88/code/esp-idf/components/heap/tlsf -I/home/w88/code/esp-idf/components/log/include -I/home/w88/code/esp-idf/components/soc/include -I/home/w88/code/esp-idf/components/soc/esp32 -I/home/w88/code/esp-idf/components/soc/esp32/include -I/home/w88/code/esp-idf/components/soc/esp32/register -I/home/w88/code/esp-idf/components/hal/platform_port/include -I/home/w88/code/esp-idf/components/hal/esp32/include -I/home/w88/code/esp-idf/components/hal/include -I/home/w88/code/esp-idf/components/esp_rom/include -I/home/w88/code/esp-idf/components/esp_rom/esp32/include -I/home/w88/code/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/w88/code/esp-idf/components/esp_rom/esp32 -I/home/w88/code/esp-idf/components/esp_common/include -I/home/w88/code/esp-idf/components/esp_system/include -I/home/w88/code/esp-idf/components/esp_system/port/soc -I/home/w88/code/esp-idf/components/esp_system/port/include/private -I/home/w88/code/esp-idf/components/esp_stdio/include -I/home/w88/code/esp-idf/components/xtensa/esp32/include -I/home/w88/code/esp-idf/components/xtensa/include -I/home/w88/code/esp-idf/components/xtensa/deprecated_include -I/home/w88/code/esp-idf/components/esp_hal_dma/include -I/home/w88/code/esp-idf/components/esp_hal_gpio/include -I/home/w88/code/esp-idf/components/esp_hal_gpio/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_usb/include -I/home/w88/code/esp-idf/components/esp_hal_pmu/include -I/home/w88/code/esp-idf/components/esp_hal_pmu/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_ana_conv/include -I/home/w88/code/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_i2s/include -I/home/w88/code/esp-idf/components/esp_hal_i2s/esp32/include -I/home/w88/code/esp-idf/components/lwip/include -I/home/w88/code/esp-idf/components/lwip/include/apps -I/home/w88/code/esp-idf/components/lwip/lwip/src/include -I/home/w88/code/esp-idf/components/lwip/port/include -I/home/w88/code/esp-idf/components/lwip/port/freertos/include -I/home/w88/code/esp-idf/components/lwip/port/esp32xx/include -I/home/w88/code/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/w88/code/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/w88/code/esp-idf/components/esp_http_server/include -I/home/w88/code/esp-idf/components/http_parser -I/home/w88/code/esp-idf/components/esp_event/include -I/home/w88/code/esp-idf/components/esp_wifi/include -I/home/w88/code/esp-idf/components/esp_wifi/include/local -I/home/w88/code/esp-idf/components/esp_wifi/wifi_apps/include -I/home/w88/code/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/w88/code/esp-idf/components/esp_phy/include -I/home/w88/code/esp-idf/components/esp_phy/esp32/include -I/home/w88/code/esp-idf/components/esp_netif/include -I/home/w88/code/esp-idf/components/nvs_flash/include -I/home/w88/code/esp-idf/components/esp_partition/include -I/home/w88/code/esp-idf/components/esp_blockdev/include -I/home/w88/code/esp-idf/components/driver/i2c/include -I/home/w88/code/esp-idf/components/driver/touch_sensor/include -I/home/w88/code/esp-idf/components/driver/twai/include -I/home/w88/code/esp-idf/components/driver/touch_sensor/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_i2c/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_i2c/include -I/home/w88/code/esp-idf/components/esp_hal_twai/include -I/home/w88/code/esp-idf/components/esp_hal_twai/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_touch_sens/esp32/include -I/home/w88/code/esp-idf/components/esp_hal_touch_sens/include -I/home/w88/code/esp-idf/components/esp_adc/include -I/home/w88/code/esp-idf/components/esp_adc/interface -I/home/w88/code/esp-idf/components/esp_adc/esp32/include -I/home/w88/code/esp-idf/components/esp_driver_pcnt/include -I/home/w88/code/esp-idf/components/esp_hal_pcnt/include -I/home/w88/code/esp-idf/components/esp_hal_pcnt/esp32/include -I/home/w88/code/esp-idf/components/esp_driver_i2c/include -I/home/w88/code/esp-idf/components/esp_timer/include -I/home/w88/code/Radio/managed_components/espressif__cjson/cJSON -I/home/w88/code/Radio/managed_components/nixy4__u8g2/include -I/home/w88/code/esp-idf/components/esp_driver_spi/include -I/home/w88/code/esp-idf/components/esp_pm/include -I/home/w88/code/esp-idf/components/esp_hal_gpspi/include -I/home/w88/code/esp-idf/components/esp_hal_gpspi/esp32/include -I/home/w88/code/esp-idf/components/esp_driver_gpio/include @"/home/w88/code/Radio/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/w88/code/Radio=. -fmacro-prefix-map=/home/w88/code/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/w88/code/Radio/main/main.c
In file included from /home/w88/code/Radio/main/main.c:11:
/home/w88/code/esp-idf/components/driver/i2c/include/driver/i2c.h:13:9: note: '#pragma message: 
================================ CRITICAL WARNING ================================
This legacy I2C driver (driver/i2c.h) is officially END-OF-LIFE (EOL) as of ESP-IDF v6.0.

1. NO SUPPORT: ESP-IDF will not provide updates, bug fixes, or security patches timely.
2. PLANNED REMOVAL: This driver WILL BE REMOVED in ESP-IDF v7.0 (next major release).
3. ACTION REQUIRED: Migrate to 'driver/i2c_master.h' or 'driver/i2c_slave.h' immediately.
   - If you are a library maintainer, please update your code.
   - If you are using 3rd-party libraries, contact the authors for updates.

4. SUPPRESS WARNING: Set Kconfig 'CONFIG_I2C_SUPPRESS_DEPRECATE_WARN=y' to silent
   this warning. However, by doing so, YOU ASSUME ALL RISKS including potential
   security vulnerabilities, system instability, and future incompatibility.

For API reference of the new I2C driver, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-reference/peripherals/i2c.html
For other items about migration, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/migration-guides/index.html
==================================================================================
   '
   13 | #pragma message("\n" \
      |         ^~~~~~~
/home/w88/code/Radio/main/main.c: In function 'oled_update_ui':
/home/w88/code/Radio/main/main.c:390:55: error: 'ip_info' undeclared (first use in this function)
  390 |                     if (esp_netif_get_ip_info(netif, &ip_info) == ESP_OK) {
      |                                                       ^~~~~~~
/home/w88/code/Radio/main/main.c:390:55: note: each undeclared identifier is reported only once for each function it appears in
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
